# clinvar-gk-python

./: .gitignore  CLAUDE.md  README.md  lint.sh  log_conf.json  pyproject.toml  variation-normalizer-compose.yaml
.github/workflows/: ci.yaml
clinvar_gk_pilot/: .dev.env  cli.py  config.py  gcs.py  logger.py  main.py  task.py  utils.py
misc/: catvar_combiner.py  catvar_ndjsonifier.py  catvar_ndjsonifier_json.py  clinvar-vrsification  splitlines.py
misc/combination/: combine-catvars.py  combine-files.py  run-combine-catvars.bash
notebooks/: ASHG-clinvar-GKS-duckdb.ipynb  ASHG-clinvar-GKS-python.ipynb  ASHG-clinvar-GKS_DRAFT.ipynb
test/: test_cli.py  test_main.py
